--- a/adminka/templates/master-tests.html
+++ b/adminka/templates/master-tests.html
@@ -3,8 +3,8 @@
 	<head>
 		<meta charset="utf-8">
 		<title>Настройка</title>
-		<link href='style.css' rel="stylesheet">
-		<link href="bootstrap-grid.min.css" rel="stylesheet">
+		<link href='{% static "style.css" %}' rel="stylesheet">
+		<link href='{% static "bootstrap-grid.min.css" %}' rel="stylesheet">
 	</head>
 	<body class="hands">
 		<div class="head-overlap overlap-color-dark">HANDSAPP</div>
@@ -28,6 +28,6 @@
 				</div>
 			</div>
 		</div>
-		<script src="app.js"></script>
+		<script src='{% static "app.js" %}'></script>
 	</body>
 </html>
